--- a/tomcat-another/web/WEB-INF/web.xml
+++ b/tomcat-another/web/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-         version="4.0">
+         version="3.1">
     <servlet>
         <servlet-name>springDispatcherServlet</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -13,8 +13,16 @@
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
+<!--    <servlet>
+        <servlet-name>loginServlet</servlet-name>
+        <servlet-class>com.another.tomcat.servlet.LoginServlet</servlet-class>
+    </servlet>-->
     <servlet-mapping>
         <servlet-name>springDispatcherServlet</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+<!--    <servlet-mapping>
+        <servlet-name>loginServlet</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>-->
 </web-app>
